// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDataGrid keyboard controls allows user to enter and exit grid navigation 1`] = `
<div
  data-focus-guard="true"
  style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
  tabindex="-1"
/>
`;

exports[`EuiDataGrid keyboard controls allows user to enter and exit grid navigation 2`] = `
<div
  data-focus-guard="true"
  style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
  tabindex="-1"
/>
`;

exports[`EuiDataGrid keyboard controls allows user to enter and exit grid navigation 3`] = `
<div
  data-focus-guard="true"
  style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
  tabindex="-1"
/>
`;

exports[`EuiDataGrid keyboard controls allows user to enter and exit grid navigation 4`] = `
<div
  data-focus-guard="true"
  style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
  tabindex="-1"
/>
`;

exports[`EuiDataGrid keyboard controls allows user to enter and exit grid navigation 5`] = `
<div
  data-focus-guard="true"
  style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
  tabindex="-1"
/>
`;

exports[`EuiDataGrid pagination renders 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiPopover euiPopover--anchorUpRight euiPopover--withTitle"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiButtonEmpty--iconRight"
          data-test-subj="tablePaginationPopoverButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="arrowDown"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Rows per page: 6
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <nav
      aria-label="Pagination for preceding grid: test grid"
      class="euiPagination"
    >
      <a
        aria-controls="htmlId"
        aria-label="Previous page, 1"
        class="euiButtonIcon euiButtonIcon--text"
        data-test-subj="pagination-button-previous"
        href="#htmlId"
        rel="noreferrer"
      >
        <div
          aria-hidden="true"
          class="euiButtonIcon__icon"
          data-euiicon-type="arrowLeft"
        />
      </a>
      <ul
        aria-label="Pagination for preceding grid: test grid"
        class="euiPagination__list"
      >
        <li
          class="euiPagination__item"
        >
          <a
            aria-controls="htmlId"
            aria-label="Page 1 of 2"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-0"
            href="#htmlId"
            rel="noreferrer"
          >
            <span
              class="euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                1
              </span>
            </span>
          </a>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-controls="htmlId"
            aria-current="true"
            aria-label="Page 2 of 2"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-1"
            disabled=""
            type="button"
          >
            <span
              class="euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                2
              </span>
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-label="Next page"
        class="euiButtonIcon euiButtonIcon--text"
        data-test-subj="pagination-button-next"
        disabled=""
        type="button"
      >
        <div
          aria-hidden="true"
          class="euiButtonIcon__icon"
          data-euiicon-type="arrowRight"
        />
      </button>
    </nav>
  </div>
</div>
`;

exports[`EuiDataGrid rendering renders additional toolbar controls 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-lock-disabled="disabled"
    style="height:100%"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--rowHoverHighlight testClass1 testClass2"
    >
      <div
        class="euiDataGrid__controls"
        data-test-sub="dataGridControls"
      >
        <button>
          Button
        </button>
        <div
          class="euiPopover euiPopover--anchorDownLeft"
          data-test-subj="dataGridColumnSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content"
              >
                <div
                  class="euiButtonContent__icon"
                  data-euiicon-type="listAdd"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Columns
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          data-test-subj="dataGridStyleSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridStyleSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content"
              >
                <div
                  class="euiButtonContent__icon"
                  data-euiicon-type="tableDensityExpanded"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Density
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn testClass1 testClass2"
          data-test-subj="dataGridFullScrenButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="fullScreen"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Full screen
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiDataGrid__verticalScroll"
        data-test-subj="test subject string"
      >
        <div
          class="euiDataGrid__overflow"
        >
          <div
            aria-label="aria-label"
            class="euiDataGrid__content"
            data-test-subj="dataGridWrapper"
            id="htmlId"
            role="grid"
            tabindex="0"
          >
            <div
              class="euiDataGridHeader"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                class="euiDataGridHeaderCell"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  A
                </div>
              </div>
              <div
                class="euiDataGridHeaderCell"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  B
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 1, Column: 1:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            0, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 1, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            0, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 2, Column: 1:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            1, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 2, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            1, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 3, Column: 1:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            2, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 3, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            2, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="htmlId"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;

exports[`EuiDataGrid rendering renders control columns 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-lock-disabled="disabled"
    style="height:100%"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--rowHoverHighlight testClass1 testClass2"
    >
      <div
        class="euiDataGrid__controls"
        data-test-sub="dataGridControls"
      >
        <button>
          Button
        </button>
        <div
          class="euiPopover euiPopover--anchorDownLeft"
          data-test-subj="dataGridColumnSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content"
              >
                <div
                  class="euiButtonContent__icon"
                  data-euiicon-type="listAdd"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Columns
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          data-test-subj="dataGridStyleSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridStyleSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content"
              >
                <div
                  class="euiButtonContent__icon"
                  data-euiicon-type="tableDensityExpanded"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Density
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn testClass1 testClass2"
          data-test-subj="dataGridFullScrenButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="fullScreen"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Full screen
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiDataGrid__verticalScroll"
        data-test-subj="test subject string"
      >
        <div
          class="euiDataGrid__overflow"
        >
          <div
            aria-label="aria-label"
            class="euiDataGrid__content"
            data-test-subj="dataGridWrapper"
            id="htmlId"
            role="grid"
            tabindex="0"
          >
            <div
              class="euiDataGridHeader"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                class="euiDataGridHeaderCell euiDataGridHeaderCell--controlColumn"
                data-test-subj="dataGridHeaderCell-leading"
                role="columnheader"
                style="width:50px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  <span>
                    leading heading
                  </span>
                </div>
              </div>
              <div
                class="euiDataGridHeaderCell"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  A
                </div>
              </div>
              <div
                class="euiDataGridHeaderCell"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  B
                </div>
              </div>
              <div
                class="euiDataGridHeaderCell euiDataGridHeaderCell--controlColumn"
                data-test-subj="dataGridHeaderCell-trailing"
                role="columnheader"
                style="width:50px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  <span>
                    trailing heading
                  </span>
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell euiDataGridRowCell--controlColumn"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:50px"
                tabindex="-1"
              >
                <div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-lock-disabled="disabled"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <p
                          class="euiScreenReaderOnly"
                        >
                          <span>
                            Row: 1, Column: 1:
                          </span>
                        </p>
                        <div
                          class="euiDataGridRowCell__truncate"
                        >
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 1, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            0, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 1, Column: 3:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            0, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell euiDataGridRowCell--controlColumn"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:50px"
                tabindex="-1"
              >
                <div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-lock-disabled="disabled"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <p
                          class="euiScreenReaderOnly"
                        >
                          <span>
                            Row: 1, Column: 4:
                          </span>
                        </p>
                        <div
                          class="euiDataGridRowCell__truncate"
                        >
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell euiDataGridRowCell--controlColumn"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:50px"
                tabindex="-1"
              >
                <div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-lock-disabled="disabled"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <p
                          class="euiScreenReaderOnly"
                        >
                          <span>
                            Row: 2, Column: 1:
                          </span>
                        </p>
                        <div
                          class="euiDataGridRowCell__truncate"
                        >
                          1
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 2, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            1, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 2, Column: 3:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            1, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell euiDataGridRowCell--controlColumn"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:50px"
                tabindex="-1"
              >
                <div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-lock-disabled="disabled"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <p
                          class="euiScreenReaderOnly"
                        >
                          <span>
                            Row: 2, Column: 4:
                          </span>
                        </p>
                        <div
                          class="euiDataGridRowCell__truncate"
                        >
                          1
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell euiDataGridRowCell--controlColumn"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:50px"
                tabindex="-1"
              >
                <div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-lock-disabled="disabled"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <p
                          class="euiScreenReaderOnly"
                        >
                          <span>
                            Row: 3, Column: 1:
                          </span>
                        </p>
                        <div
                          class="euiDataGridRowCell__truncate"
                        >
                          2
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 3, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            2, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 3, Column: 3:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            2, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell euiDataGridRowCell--controlColumn"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:50px"
                tabindex="-1"
              >
                <div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                  <div
                    data-focus-lock-disabled="disabled"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <p
                          class="euiScreenReaderOnly"
                        >
                          <span>
                            Row: 3, Column: 4:
                          </span>
                        </p>
                        <div
                          class="euiDataGridRowCell__truncate"
                        >
                          2
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    data-focus-guard="true"
                    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="htmlId"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;

exports[`EuiDataGrid rendering renders custom column headers 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-lock-disabled="disabled"
    style="height:100%"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--rowHoverHighlight testClass1 testClass2"
    >
      <div
        class="euiDataGrid__controls"
        data-test-sub="dataGridControls"
      >
        <div
          class="euiPopover euiPopover--anchorDownLeft"
          data-test-subj="dataGridColumnSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content"
              >
                <div
                  class="euiButtonContent__icon"
                  data-euiicon-type="listAdd"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Columns
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          data-test-subj="dataGridStyleSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridStyleSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content"
              >
                <div
                  class="euiButtonContent__icon"
                  data-euiicon-type="tableDensityExpanded"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Density
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn testClass1 testClass2"
          data-test-subj="dataGridFullScrenButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="fullScreen"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Full screen
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiDataGrid__verticalScroll"
        data-test-subj="test subject string"
      >
        <div
          class="euiDataGrid__overflow"
        >
          <div
            aria-label="aria-label"
            class="euiDataGrid__content"
            data-test-subj="dataGridWrapper"
            id="htmlId"
            role="grid"
            tabindex="0"
          >
            <div
              class="euiDataGridHeader"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                class="euiDataGridHeaderCell"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  Column A
                </div>
              </div>
              <div
                class="euiDataGridHeaderCell"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  <div>
                    More Elements
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 1, Column: 1:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            0, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 1, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            0, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 2, Column: 1:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            1, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 2, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            1, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 3, Column: 1:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            2, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 3, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            2, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="htmlId"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;

exports[`EuiDataGrid rendering renders with common and div attributes 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-lock-disabled="disabled"
    style="height:100%"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--rowHoverHighlight testClass1 testClass2"
    >
      <div
        class="euiDataGrid__controls"
        data-test-sub="dataGridControls"
      >
        <div
          class="euiPopover euiPopover--anchorDownLeft"
          data-test-subj="dataGridColumnSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content"
              >
                <div
                  class="euiButtonContent__icon"
                  data-euiicon-type="listAdd"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Columns
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          data-test-subj="dataGridStyleSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridStyleSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content"
              >
                <div
                  class="euiButtonContent__icon"
                  data-euiicon-type="tableDensityExpanded"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Density
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn testClass1 testClass2"
          data-test-subj="dataGridFullScrenButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="fullScreen"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Full screen
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiDataGrid__verticalScroll"
        data-test-subj="test subject string"
      >
        <div
          class="euiDataGrid__overflow"
        >
          <div
            aria-label="aria-label"
            class="euiDataGrid__content"
            data-test-subj="dataGridWrapper"
            id="htmlId"
            role="grid"
            tabindex="0"
          >
            <div
              class="euiDataGridHeader"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                class="euiDataGridHeaderCell"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  A
                </div>
              </div>
              <div
                class="euiDataGridHeaderCell"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  B
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 1, Column: 1:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            0, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 1, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            0, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 2, Column: 1:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            1, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 2, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            1, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiDataGridRow"
              data-test-subj="dataGridRow"
              role="row"
            >
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 3, Column: 1:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            2, A
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiDataGridRowCell"
                data-test-subj="dataGridRowCell"
                role="gridcell"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridRowCell__content"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
                  >
                    <div
                      class="euiPopover__anchor euiDataGridRowCell__expand"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <p
                            class="euiScreenReaderOnly"
                          >
                            <span>
                              Row: 3, Column: 2:
                            </span>
                          </p>
                          <div
                            class="euiDataGridRowCell__truncate"
                          >
                            2, B
                          </div>
                        </div>
                        <div
                          class="euiDataGridRowCell__expandButton"
                        >
                          <button
                            aria-hidden="true"
                            class="euiButtonIcon euiButtonIcon--text euiDataGridRowCell__expandButtonIcon"
                            tabindex="-1"
                            title="Click or hit enter to interact with cell content"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              data-euiicon-type="expandMini"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="htmlId"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;
